# the-casino-and-the-church

./: .gitignore  README.md  package-lock.json  package.json  replit.md  tsconfig.json  vite.config.ts
client/src/: App.tsx
client/src/components/: CasinoChurchHomepage.tsx  CasinoRealm.tsx  ChurchRealm.tsx  PhaserScene.tsx  ProfileModal.tsx  StoryModal.tsx  WalletConnectButton.tsx  WalletModal.tsx
client/src/components/church/: FlipBook.tsx  ProphecyQuests.tsx  QuestPage.tsx  WriteSermons.tsx
client/src/components/games/: GamesCatalog.tsx  MemecoinSimulator.tsx  SlotMachine.tsx
client/src/hooks/: useCncBalance.tsx  useProfile.tsx  useSolBalance.tsx
client/src/lib/: honeycomb.ts
client/src/lib/stores/: useAudio.tsx  useProgress.tsx
client/src/lib/wallet/: WalletProvider.tsx  cnc.ts  sol.ts
client/src/styles/: casino-realm.css  church-flipbook.css  church-realm.css  games-catalog.css  homepage.css  memecoin-simulator.css  prophecy-quests.css  quest-page.css  slot-machine.css  story-modal.css  wallet.css  write-sermons.css
programs/casino-nchurch/: Cargo.toml
programs/casino-nchurch/src/: errors.rs  lib.rs
programs/casino-nchurch/src/instructions/: casino_vrf.rs  mod.rs
programs/casino-nchurch/src/state/: casino.rs
programs/casino-nchurch/src/utils/: mod.rs  vrf.rs
server/: index.ts  routes.ts
server/modules/honeycomb/: constants.ts  honeycomb.config.ts  honeycomb.service.ts
server/tests/: index.ts
